--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "christopher", email = "christopher.hu@traveloka.com"},
 ]
-dependencies = ["requests>=2.32.5"]
+dependencies = ["requests>=2.32.5", "google>=3.0.0", "google-genai>=1.32.0"]
 requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
