--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "christopher", email = "christopher.hu@traveloka.com"},
 ]
-dependencies = ["requests>=2.32.5", "google>=3.0.0", "google-genai>=1.32.0"]
+dependencies = ["google>=3.0.0", "google-genai>=1.32.0", "pandas>=2.3.2"]
 requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
@@ -13,3 +13,7 @@ license = {text = "MIT"}
 
 [tool.pdm]
 distribution = false
+
+[tool.pdm.dependencies]
+numpy = "1.26.0"  # 比 2.0 稳定
+pandas = "*"
